# Terminal-Color-Tool

./: .gitignore  CLAUDE.md  LICENSE  README.md  USER_WORKFLOW.md  UX_IMPROVEMENTS.md  debug_test.py  demo.py  main.py  pyproject.toml  requirements.txt  setup.sh  test_theme_generator.py
.factory/skills/ai-data-analyst/: SKILL.md
.factory/skills/browser/: SKILL.md  eval.js  nav.js  package.json  pick.js  screenshot.js  start.js
.factory/skills/product-management/: SKILL.md
app/: __init__.py  color_picker.py  export.py  image_processor.py  main_window.py  preview.py
app/api/: __init__.py  colors.py  export.py
app/static/css/: styles.css
app/static/js/: app.js  colorPicker.js  export.js  preview.js
app/templates/: index.html
